crates/franken-engine/tests/snapshots/ast_parser_golden_integration__empty_source_error.snap
---
source: tests/ast_parser_golden_integration.rs
expression: scrubbed_actual
---
{
  "code": "EmptySource",
  "message": "source is empty after whitespace normalization",
  "source_label": "<inline>",
  "span": null
}
