crates/franken-engine/tests/snapshots/ast_parser_golden_integration__function_declaration.snap
---
source: tests/ast_parser_golden_integration.rs
expression: scrubbed_actual
---
{
  "goal": "Script",
  "body": [
    {
      "FunctionDeclaration": {
        "name": "add",
        "params": [
          {
            "pattern": {
              "Identifier": "a"
            },
            "span": {
              "start_offset": "[START_OFFSET]",
              "end_offset": "[END_OFFSET]",
              "start_line": "[START_LINE]",
              "start_column": "[START_COLUMN]",
              "end_line": "[END_LINE]",
              "end_column": "[END_COLUMN]"
            }
          },
          {
            "pattern": {
              "Identifier": "b"
            },
            "span": {
              "start_offset": "[START_OFFSET]",
              "end_offset": "[END_OFFSET]",
              "start_line": "[START_LINE]",
              "start_column": "[START_COLUMN]",
              "end_line": "[END_LINE]",
              "end_column": "[END_COLUMN]"
            }
          }
        ],
        "body": {
          "body": [
            {
              "Return": {
                "argument": {
                  "Binary": {
                    "operator": "Add",
                    "left": {
                      "Identifier": "a"
                    },
                    "right": {
                      "Identifier": "b"
                    }
                  }
                },
                "span": {
                  "start_offset": "[START_OFFSET]",
                  "end_offset": "[END_OFFSET]",
                  "start_line": "[START_LINE]",
                  "start_column": "[START_COLUMN]",
                  "end_line": "[END_LINE]",
                  "end_column": "[END_COLUMN]"
                }
              }
            }
          ],
          "span": {
            "start_offset": "[START_OFFSET]",
            "end_offset": "[END_OFFSET]",
            "start_line": "[START_LINE]",
            "start_column": "[START_COLUMN]",
            "end_line": "[END_LINE]",
            "end_column": "[END_COLUMN]"
          }
        },
        "is_async": false,
        "is_generator": false,
        "span": {
          "start_offset": "[START_OFFSET]",
          "end_offset": "[END_OFFSET]",
          "start_line": "[START_LINE]",
          "start_column": "[START_COLUMN]",
          "end_line": "[END_LINE]",
          "end_column": "[END_COLUMN]"
        },
        "strict": false
      }
    }
  ],
  "span": {
    "start_offset": "[START_OFFSET]",
    "end_offset": "[END_OFFSET]",
    "start_line": "[START_LINE]",
    "start_column": "[START_COLUMN]",
    "end_line": "[END_LINE]",
    "end_column": "[END_COLUMN]"
  }
}
