crates/franken-engine/tests/snapshots/ast_parser_golden_integration__template_literals.snap
---
source: tests/ast_parser_golden_integration.rs
expression: scrubbed_actual
---
{
  "goal": "Script",
  "body": [
    {
      "VariableDeclaration": {
        "kind": "Const",
        "declarations": [
          {
            "pattern": {
              "Identifier": "basic"
            },
            "initializer": {
              "TemplateLiteral": {
                "quasis": [
                  "Hello, world!"
                ],
                "expressions": []
              }
            },
            "span": {
              "start_offset": "[START_OFFSET]",
              "end_offset": "[END_OFFSET]",
              "start_line": "[START_LINE]",
              "start_column": "[START_COLUMN]",
              "end_line": "[END_LINE]",
              "end_column": "[END_COLUMN]"
            }
          }
        ],
        "span": {
          "start_offset": "[START_OFFSET]",
          "end_offset": "[END_OFFSET]",
          "start_line": "[START_LINE]",
          "start_column": "[START_COLUMN]",
          "end_line": "[END_LINE]",
          "end_column": "[END_COLUMN]"
        }
      }
    },
    {
      "VariableDeclaration": {
        "kind": "Const",
        "declarations": [
          {
            "pattern": {
              "Identifier": "withVariable"
            },
            "initializer": {
              "TemplateLiteral": {
                "quasis": [
                  "Hello, ",
                  "!"
                ],
                "expressions": [
                  {
                    "Identifier": "name"
                  }
                ]
              }
            },
            "span": {
              "start_offset": "[START_OFFSET]",
              "end_offset": "[END_OFFSET]",
              "start_line": "[START_LINE]",
              "start_column": "[START_COLUMN]",
              "end_line": "[END_LINE]",
              "end_column": "[END_COLUMN]"
            }
          }
        ],
        "span": {
          "start_offset": "[START_OFFSET]",
          "end_offset": "[END_OFFSET]",
          "start_line": "[START_LINE]",
          "start_column": "[START_COLUMN]",
          "end_line": "[END_LINE]",
          "end_column": "[END_COLUMN]"
        }
      }
    },
    {
      "VariableDeclaration": {
        "kind": "Const",
        "declarations": [
          {
            "pattern": {
              "Identifier": "multiline"
            },
            "initializer": {
              "TemplateLiteral": {
                "quasis": [
                  "   Line 1   Line 2   Value: ",
                  " "
                ],
                "expressions": [
                  {
                    "Identifier": "value"
                  }
                ]
              }
            },
            "span": {
              "start_offset": "[START_OFFSET]",
              "end_offset": "[END_OFFSET]",
              "start_line": "[START_LINE]",
              "start_column": "[START_COLUMN]",
              "end_line": "[END_LINE]",
              "end_column": "[END_COLUMN]"
            }
          }
        ],
        "span": {
          "start_offset": "[START_OFFSET]",
          "end_offset": "[END_OFFSET]",
          "start_line": "[START_LINE]",
          "start_column": "[START_COLUMN]",
          "end_line": "[END_LINE]",
          "end_column": "[END_COLUMN]"
        }
      }
    }
  ],
  "span": {
    "start_offset": "[START_OFFSET]",
    "end_offset": "[END_OFFSET]",
    "start_line": "[START_LINE]",
    "start_column": "[START_COLUMN]",
    "end_line": "[END_LINE]",
    "end_column": "[END_COLUMN]"
  }
}
